src/test/resources/30/single/xhtml/valid/attrs-custom-ns.xhtml
<!DOCTYPE html>	 
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:foo="https://example.org" lang="en">
    <head>
        <title>Test</title>
        <meta charset="UTF-8" />
    </head>
    <body>
        <h1>Test</h1>
        <p foo:bar1="baz" foo:bar2="baz" foo:bar3="baz">custom attribute!</p>
    </body>
</html>
