src/test/resources/30/single/xhtml/invalid/index-noindex.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops"
    xml:lang="en-US" lang="en-US">
    <head>
        <meta charset="UTF-8" />
        <title>Simplest Index</title>
    </head>

    <body>
        <h2>Simplest index</h2>
        <p>No Index</p>
    </body>
</html>
